parser.output
   0  $accept : %entry% $end

   1  program : rev_program

   2  rev_program :
   3              | rev_program stmt

   4  sdecl : SUB ID LPAREN param_list_opt RPAREN LBRACE stmt_list RBRACE

   5  param_list_opt :
   6                 | param_list

   7  param_list : var_type ID
   8             | param_list COMMA var_type ID

   9  var_type : basic_type
  10           | var_type LBRACKET RBRACKET

  11  basic_type : NUM
  12             | STRING
  13             | FUNC
  14             | MATRIX

  15  stmt_list :
  16            | stmt_list stmt

  17  stmt : LBRACE stmt_list RBRACE
  18       | MATCH LPAREN expr RPAREN LBRACE match_list RBRACE
  19       | assign_stmt
  20       | expr SEMI
  21       | PASS SEMI
  22       | sdecl

  23  match_list : match_list match_cmd

  24  match_cmd : flow_type match_cond QMARK stmt

  25  flow_type :
  26            | CONT
  27            | DONE
  28            | LOOP

  29  match_cond : match_cmp expr
  30             | expr
  31             | TRUE
  32             | ANY
  33             | DEFAULT

  34  match_cmp : NEQ
  35            | LT
  36            | LEQ
  37            | GT
  38            | GEQ

  39  assign_lval : ID
  40              | assign_lval LBRACKET expr RBRACKET

  41  assign_stmt : assign_lval ASSIGN expr SEMI
  42              | CONST ID ASSIGN expr SEMI
  43              | EXTERN assign_lval ASSIGN expr SEMI

  44  expr : LITINT
  45       | LITFLOAT
  46       | LITSTRING
  47       | PIPE func_param_list PIPE POINT PIPE func_expr PIPE
  48       | ID
  49       | expr PLUS expr
  50       | expr MINUS expr
  51       | expr TIMES expr
  52       | expr DIVIDE expr
  53       | expr EXP expr
  54       | expr MOD expr
  55       | expr MATMULT expr
  56       | expr EQ expr
  57       | expr NEQ expr
  58       | expr LT expr
  59       | expr LEQ expr
  60       | expr GT expr
  61       | expr GEQ expr
  62       | expr CONCAT expr
  63       | MINUS expr
  64       | NOT expr
  65       | LPAREN expr RPAREN
  66       | FLOG LPAREN param_list_call RPAREN
  67       | FLN LPAREN param_list_call RPAREN
  68       | FCOS LPAREN param_list_call RPAREN
  69       | FSIN LPAREN param_list_call RPAREN
  70       | ID LPAREN param_list_call RPAREN
  71       | ID LCSUB param_list_call_opt RCSUB
  72       | LBRACKET list_expr_list_opt RBRACKET
  73       | MATRIX matrix_rows_list RBRACKET

  74  func_param_list : ID
  75                  | func_param_list COMMA ID

  76  func_expr : LITINT
  77            | LITFLOAT
  78            | ID
  79            | func_expr PLUS func_expr
  80            | func_expr MINUS func_expr
  81            | func_expr TIMES func_expr
  82            | func_expr DIVIDE func_expr
  83            | func_expr EXP func_expr
  84            | func_expr MOD func_expr
  85            | func_expr EQ func_expr
  86            | func_expr NEQ func_expr
  87            | func_expr LT func_expr
  88            | func_expr LEQ func_expr
  89            | func_expr GT func_expr
  90            | func_expr GEQ func_expr
  91            | MINUS func_expr
  92            | NOT func_expr
  93            | LPAREN func_expr RPAREN
  94            | FLOG LPAREN param_list_call RPAREN
  95            | FLN LPAREN param_list_call RPAREN
  96            | FCOS LPAREN param_list_call RPAREN
  97            | FSIN LPAREN param_list_call RPAREN
  98            | ID LPAREN param_list_call RPAREN

  99  param_list_call_opt :
 100                      | param_list_call

 101  param_list_call : expr
 102                  | param_list_call COMMA expr

 103  list_expr_list_opt :
 104                     | list_expr_list

 105  list_expr_list : expr
 106                 | list_expr_list COMMA expr

 107  matrix_rows_list : matrix_row_contents
 108                   | matrix_rows_list SEMI matrix_row_contents

 109  matrix_row_contents : expr
 110                      | matrix_row_contents COMMA expr

 111  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (111)
	rev_program : .  (2)

	.  reduce 2

	program  goto 3
	rev_program  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (111)

	.  reduce 111


state 4
	program : rev_program .  (1)
	rev_program : rev_program . stmt  (3)

	LPAREN  shift 5
	LBRACE  shift 6
	LBRACKET  shift 7
	PIPE  shift 8
	MATRIX  shift 9
	MINUS  shift 10
	FLOG  shift 11
	FLN  shift 12
	FCOS  shift 13
	FSIN  shift 14
	NOT  shift 15
	MATCH  shift 16
	PASS  shift 17
	SUB  shift 18
	CONST  shift 19
	EXTERN  shift 20
	LITINT  shift 21
	LITFLOAT  shift 22
	LITSTRING  shift 23
	ID  shift 24
	$end  reduce 1

	stmt  goto 25
	sdecl  goto 26
	expr  goto 27
	assign_stmt  goto 28
	assign_lval  goto 29


state 5
	expr : LPAREN . expr RPAREN  (65)

	LPAREN  shift 5
	LBRACKET  shift 7
	PIPE  shift 8
	MATRIX  shift 9
	MINUS  shift 10
	FLOG  shift 11
	FLN  shift 12
	FCOS  shift 13
	FSIN  shift 14
	NOT  shift 15
	LITINT  shift 21
	LITFLOAT  shift 22
	LITSTRING  shift 23
	ID  shift 30
	.  error

	expr  goto 31


state 6
	stmt : LBRACE . stmt_list RBRACE  (17)
	stmt_list : .  (15)

	.  reduce 15

	stmt_list  goto 32


state 7
	expr : LBRACKET . list_expr_list_opt RBRACKET  (72)
	list_expr_list_opt : .  (103)

	LPAREN  shift 5
	LBRACKET  shift 7
	PIPE  shift 8
	MATRIX  shift 9
	MINUS  shift 10
	FLOG  shift 11
	FLN  shift 12
	FCOS  shift 13
	FSIN  shift 14
	NOT  shift 15
	LITINT  shift 21
	LITFLOAT  shift 22
	LITSTRING  shift 23
	ID  shift 30
	RBRACKET  reduce 103

	expr  goto 33
	list_expr_list_opt  goto 34
	list_expr_list  goto 35


state 8
	expr : PIPE . func_param_list PIPE POINT PIPE func_expr PIPE  (47)

	ID  shift 36
	.  error

	func_param_list  goto 37


state 9
	expr : MATRIX . matrix_rows_list RBRACKET  (73)

	LPAREN  shift 5
	LBRACKET  shift 7
	PIPE  shift 8
	MATRIX  shift 9
	MINUS  shift 10
	FLOG  shift 11
	FLN  shift 12
	FCOS  shift 13
	FSIN  shift 14
	NOT  shift 15
	LITINT  shift 21
	LITFLOAT  shift 22
	LITSTRING  shift 23
	ID  shift 30
	.  error

	expr  goto 38
	matrix_rows_list  goto 39
	matrix_row_contents  goto 40


state 10
	expr : MINUS . expr  (63)

	LPAREN  shift 5
	LBRACKET  shift 7
	PIPE  shift 8
	MATRIX  shift 9
	MINUS  shift 10
	FLOG  shift 11
	FLN  shift 12
	FCOS  shift 13
	FSIN  shift 14
	NOT  shift 15
	LITINT  shift 21
	LITFLOAT  shift 22
	LITSTRING  shift 23
	ID  shift 30
	.  error

	expr  goto 41


state 11
	expr : FLOG . LPAREN param_list_call RPAREN  (66)

	LPAREN  shift 42
	.  error


state 12
	expr : FLN . LPAREN param_list_call RPAREN  (67)

	LPAREN  shift 43
	.  error


state 13
	expr : FCOS . LPAREN param_list_call RPAREN  (68)

	LPAREN  shift 44
	.  error


state 14
	expr : FSIN . LPAREN param_list_call RPAREN  (69)

	LPAREN  shift 45
	.  error


state 15
	expr : NOT . expr  (64)

	LPAREN  shift 5
	LBRACKET  shift 7
	PIPE  shift 8
	MATRIX  shift 9
	MINUS  shift 10
	FLOG  shift 11
	FLN  shift 12
	FCOS  shift 13
	FSIN  shift 14
	NOT  shift 15
	LITINT  shift 21
	LITFLOAT  shift 22
	LITSTRING  shift 23
	ID  shift 30
	.  error

	expr  goto 46


state 16
	stmt : MATCH . LPAREN expr RPAREN LBRACE match_list RBRACE  (18)

	LPAREN  shift 47
	.  error


state 17
	stmt : PASS . SEMI  (21)

	SEMI  shift 48
	.  error


state 18
	sdecl : SUB . ID LPAREN param_list_opt RPAREN LBRACE stmt_list RBRACE  (4)

	ID  shift 49
	.  error


state 19
	assign_stmt : CONST . ID ASSIGN expr SEMI  (42)

	ID  shift 50
	.  error


state 20
	assign_stmt : EXTERN . assign_lval ASSIGN expr SEMI  (43)

	ID  shift 51
	.  error

	assign_lval  goto 52


state 21
	expr : LITINT .  (44)

	.  reduce 44


state 22
	expr : LITFLOAT .  (45)

	.  reduce 45


state 23
	expr : LITSTRING .  (46)

	.  reduce 46


state 24
	assign_lval : ID .  (39)
	expr : ID .  (48)
	expr : ID . LPAREN param_list_call RPAREN  (70)
	expr : ID . LCSUB param_list_call_opt RCSUB  (71)

	LPAREN  shift 53
	LCSUB  shift 54
	LBRACKET  reduce 39
	SEMI  reduce 48
	PLUS  reduce 48
	MINUS  reduce 48
	TIMES  reduce 48
	DIVIDE  reduce 48
	EXP  reduce 48
	MOD  reduce 48
	MATMULT  reduce 48
	ASSIGN  reduce 39
	EQ  reduce 48
	NEQ  reduce 48
	LT  reduce 48
	LEQ  reduce 48
	GT  reduce 48
	GEQ  reduce 48
	CONCAT  reduce 48


state 25
	rev_program : rev_program stmt .  (3)

	.  reduce 3


state 26
	stmt : sdecl .  (22)

	.  reduce 22


state 27
	stmt : expr . SEMI  (20)
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EXP expr  (53)
	expr : expr . MOD expr  (54)
	expr : expr . MATMULT expr  (55)
	expr : expr . EQ expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . LT expr  (58)
	expr : expr . LEQ expr  (59)
	expr : expr . GT expr  (60)
	expr : expr . GEQ expr  (61)
	expr : expr . CONCAT expr  (62)

	SEMI  shift 55
	PLUS  shift 56
	MINUS  shift 57
	TIMES  shift 58
	DIVIDE  shift 59
	EXP  shift 60
	MOD  shift 61
	MATMULT  shift 62
	EQ  shift 63
	NEQ  shift 64
	LT  shift 65
	LEQ  shift 66
	GT  shift 67
	GEQ  shift 68
	CONCAT  shift 69
	.  error


state 28
	stmt : assign_stmt .  (19)

	.  reduce 19


state 29
	assign_lval : assign_lval . LBRACKET expr RBRACKET  (40)
	assign_stmt : assign_lval . ASSIGN expr SEMI  (41)

	LBRACKET  shift 70
	ASSIGN  shift 71
	.  error


state 30
	expr : ID .  (48)
	expr : ID . LPAREN param_list_call RPAREN  (70)
	expr : ID . LCSUB param_list_call_opt RCSUB  (71)

	LPAREN  shift 53
	LCSUB  shift 54
	RPAREN  reduce 48
	RBRACKET  reduce 48
	RCSUB  reduce 48
	SEMI  reduce 48
	COMMA  reduce 48
	PLUS  reduce 48
	MINUS  reduce 48
	TIMES  reduce 48
	DIVIDE  reduce 48
	EXP  reduce 48
	MOD  reduce 48
	MATMULT  reduce 48
	EQ  reduce 48
	NEQ  reduce 48
	LT  reduce 48
	LEQ  reduce 48
	GT  reduce 48
	GEQ  reduce 48
	CONCAT  reduce 48
	QMARK  reduce 48


state 31
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EXP expr  (53)
	expr : expr . MOD expr  (54)
	expr : expr . MATMULT expr  (55)
	expr : expr . EQ expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . LT expr  (58)
	expr : expr . LEQ expr  (59)
	expr : expr . GT expr  (60)
	expr : expr . GEQ expr  (61)
	expr : expr . CONCAT expr  (62)
	expr : LPAREN expr . RPAREN  (65)

	RPAREN  shift 72
	PLUS  shift 56
	MINUS  shift 57
	TIMES  shift 58
	DIVIDE  shift 59
	EXP  shift 60
	MOD  shift 61
	MATMULT  shift 62
	EQ  shift 63
	NEQ  shift 64
	LT  shift 65
	LEQ  shift 66
	GT  shift 67
	GEQ  shift 68
	CONCAT  shift 69
	.  error


state 32
	stmt_list : stmt_list . stmt  (16)
	stmt : LBRACE stmt_list . RBRACE  (17)

	LPAREN  shift 5
	LBRACE  shift 6
	RBRACE  shift 73
	LBRACKET  shift 7
	PIPE  shift 8
	MATRIX  shift 9
	MINUS  shift 10
	FLOG  shift 11
	FLN  shift 12
	FCOS  shift 13
	FSIN  shift 14
	NOT  shift 15
	MATCH  shift 16
	PASS  shift 17
	SUB  shift 18
	CONST  shift 19
	EXTERN  shift 20
	LITINT  shift 21
	LITFLOAT  shift 22
	LITSTRING  shift 23
	ID  shift 24
	.  error

	stmt  goto 74
	sdecl  goto 26
	expr  goto 27
	assign_stmt  goto 28
	assign_lval  goto 29


state 33
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EXP expr  (53)
	expr : expr . MOD expr  (54)
	expr : expr . MATMULT expr  (55)
	expr : expr . EQ expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . LT expr  (58)
	expr : expr . LEQ expr  (59)
	expr : expr . GT expr  (60)
	expr : expr . GEQ expr  (61)
	expr : expr . CONCAT expr  (62)
	list_expr_list : expr .  (105)

	PLUS  shift 56
	MINUS  shift 57
	TIMES  shift 58
	DIVIDE  shift 59
	EXP  shift 60
	MOD  shift 61
	MATMULT  shift 62
	EQ  shift 63
	NEQ  shift 64
	LT  shift 65
	LEQ  shift 66
	GT  shift 67
	GEQ  shift 68
	CONCAT  shift 69
	RBRACKET  reduce 105
	COMMA  reduce 105


state 34
	expr : LBRACKET list_expr_list_opt . RBRACKET  (72)

	RBRACKET  shift 75
	.  error


state 35
	list_expr_list_opt : list_expr_list .  (104)
	list_expr_list : list_expr_list . COMMA expr  (106)

	COMMA  shift 76
	RBRACKET  reduce 104


state 36
	func_param_list : ID .  (74)

	.  reduce 74


state 37
	expr : PIPE func_param_list . PIPE POINT PIPE func_expr PIPE  (47)
	func_param_list : func_param_list . COMMA ID  (75)

	PIPE  shift 77
	COMMA  shift 78
	.  error


state 38
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EXP expr  (53)
	expr : expr . MOD expr  (54)
	expr : expr . MATMULT expr  (55)
	expr : expr . EQ expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . LT expr  (58)
	expr : expr . LEQ expr  (59)
	expr : expr . GT expr  (60)
	expr : expr . GEQ expr  (61)
	expr : expr . CONCAT expr  (62)
	matrix_row_contents : expr .  (109)

	PLUS  shift 56
	MINUS  shift 57
	TIMES  shift 58
	DIVIDE  shift 59
	EXP  shift 60
	MOD  shift 61
	MATMULT  shift 62
	EQ  shift 63
	NEQ  shift 64
	LT  shift 65
	LEQ  shift 66
	GT  shift 67
	GEQ  shift 68
	CONCAT  shift 69
	RBRACKET  reduce 109
	SEMI  reduce 109
	COMMA  reduce 109


state 39
	expr : MATRIX matrix_rows_list . RBRACKET  (73)
	matrix_rows_list : matrix_rows_list . SEMI matrix_row_contents  (108)

	RBRACKET  shift 79
	SEMI  shift 80
	.  error


state 40
	matrix_rows_list : matrix_row_contents .  (107)
	matrix_row_contents : matrix_row_contents . COMMA expr  (110)

	COMMA  shift 81
	RBRACKET  reduce 107
	SEMI  reduce 107


state 41
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EXP expr  (53)
	expr : expr . MOD expr  (54)
	expr : expr . MATMULT expr  (55)
	expr : expr . EQ expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . LT expr  (58)
	expr : expr . LEQ expr  (59)
	expr : expr . GT expr  (60)
	expr : expr . GEQ expr  (61)
	expr : expr . CONCAT expr  (62)
	expr : MINUS expr .  (63)

	TIMES  shift 58
	DIVIDE  shift 59
	EXP  shift 60
	MOD  shift 61
	MATMULT  shift 62
	RPAREN  reduce 63
	RBRACKET  reduce 63
	RCSUB  reduce 63
	SEMI  reduce 63
	COMMA  reduce 63
	PLUS  reduce 63
	MINUS  reduce 63
	EQ  reduce 63
	NEQ  reduce 63
	LT  reduce 63
	LEQ  reduce 63
	GT  reduce 63
	GEQ  reduce 63
	CONCAT  reduce 63
	QMARK  reduce 63


state 42
	expr : FLOG LPAREN . param_list_call RPAREN  (66)

	LPAREN  shift 5
	LBRACKET  shift 7
	PIPE  shift 8
	MATRIX  shift 9
	MINUS  shift 10
	FLOG  shift 11
	FLN  shift 12
	FCOS  shift 13
	FSIN  shift 14
	NOT  shift 15
	LITINT  shift 21
	LITFLOAT  shift 22
	LITSTRING  shift 23
	ID  shift 30
	.  error

	expr  goto 82
	param_list_call  goto 83


state 43
	expr : FLN LPAREN . param_list_call RPAREN  (67)

	LPAREN  shift 5
	LBRACKET  shift 7
	PIPE  shift 8
	MATRIX  shift 9
	MINUS  shift 10
	FLOG  shift 11
	FLN  shift 12
	FCOS  shift 13
	FSIN  shift 14
	NOT  shift 15
	LITINT  shift 21
	LITFLOAT  shift 22
	LITSTRING  shift 23
	ID  shift 30
	.  error

	expr  goto 82
	param_list_call  goto 84


state 44
	expr : FCOS LPAREN . param_list_call RPAREN  (68)

	LPAREN  shift 5
	LBRACKET  shift 7
	PIPE  shift 8
	MATRIX  shift 9
	MINUS  shift 10
	FLOG  shift 11
	FLN  shift 12
	FCOS  shift 13
	FSIN  shift 14
	NOT  shift 15
	LITINT  shift 21
	LITFLOAT  shift 22
	LITSTRING  shift 23
	ID  shift 30
	.  error

	expr  goto 82
	param_list_call  goto 85


state 45
	expr : FSIN LPAREN . param_list_call RPAREN  (69)

	LPAREN  shift 5
	LBRACKET  shift 7
	PIPE  shift 8
	MATRIX  shift 9
	MINUS  shift 10
	FLOG  shift 11
	FLN  shift 12
	FCOS  shift 13
	FSIN  shift 14
	NOT  shift 15
	LITINT  shift 21
	LITFLOAT  shift 22
	LITSTRING  shift 23
	ID  shift 30
	.  error

	expr  goto 82
	param_list_call  goto 86


state 46
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EXP expr  (53)
	expr : expr . MOD expr  (54)
	expr : expr . MATMULT expr  (55)
	expr : expr . EQ expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . LT expr  (58)
	expr : expr . LEQ expr  (59)
	expr : expr . GT expr  (60)
	expr : expr . GEQ expr  (61)
	expr : expr . CONCAT expr  (62)
	expr : NOT expr .  (64)

	.  reduce 64


state 47
	stmt : MATCH LPAREN . expr RPAREN LBRACE match_list RBRACE  (18)

	LPAREN  shift 5
	LBRACKET  shift 7
	PIPE  shift 8
	MATRIX  shift 9
	MINUS  shift 10
	FLOG  shift 11
	FLN  shift 12
	FCOS  shift 13
	FSIN  shift 14
	NOT  shift 15
	LITINT  shift 21
	LITFLOAT  shift 22
	LITSTRING  shift 23
	ID  shift 30
	.  error

	expr  goto 87


state 48
	stmt : PASS SEMI .  (21)

	.  reduce 21


state 49
	sdecl : SUB ID . LPAREN param_list_opt RPAREN LBRACE stmt_list RBRACE  (4)

	LPAREN  shift 88
	.  error


state 50
	assign_stmt : CONST ID . ASSIGN expr SEMI  (42)

	ASSIGN  shift 89
	.  error


state 51
	assign_lval : ID .  (39)

	.  reduce 39


state 52
	assign_lval : assign_lval . LBRACKET expr RBRACKET  (40)
	assign_stmt : EXTERN assign_lval . ASSIGN expr SEMI  (43)

	LBRACKET  shift 70
	ASSIGN  shift 90
	.  error


state 53
	expr : ID LPAREN . param_list_call RPAREN  (70)

	LPAREN  shift 5
	LBRACKET  shift 7
	PIPE  shift 8
	MATRIX  shift 9
	MINUS  shift 10
	FLOG  shift 11
	FLN  shift 12
	FCOS  shift 13
	FSIN  shift 14
	NOT  shift 15
	LITINT  shift 21
	LITFLOAT  shift 22
	LITSTRING  shift 23
	ID  shift 30
	.  error

	expr  goto 82
	param_list_call  goto 91


state 54
	expr : ID LCSUB . param_list_call_opt RCSUB  (71)
	param_list_call_opt : .  (99)

	LPAREN  shift 5
	LBRACKET  shift 7
	PIPE  shift 8
	MATRIX  shift 9
	MINUS  shift 10
	FLOG  shift 11
	FLN  shift 12
	FCOS  shift 13
	FSIN  shift 14
	NOT  shift 15
	LITINT  shift 21
	LITFLOAT  shift 22
	LITSTRING  shift 23
	ID  shift 30
	RCSUB  reduce 99

	expr  goto 82
	param_list_call  goto 92
	param_list_call_opt  goto 93


state 55
	stmt : expr SEMI .  (20)

	.  reduce 20


state 56
	expr : expr PLUS . expr  (49)

	LPAREN  shift 5
	LBRACKET  shift 7
	PIPE  shift 8
	MATRIX  shift 9
	MINUS  shift 10
	FLOG  shift 11
	FLN  shift 12
	FCOS  shift 13
	FSIN  shift 14
	NOT  shift 15
	LITINT  shift 21
	LITFLOAT  shift 22
	LITSTRING  shift 23
	ID  shift 30
	.  error

	expr  goto 94


state 57
	expr : expr MINUS . expr  (50)

	LPAREN  shift 5
	LBRACKET  shift 7
	PIPE  shift 8
	MATRIX  shift 9
	MINUS  shift 10
	FLOG  shift 11
	FLN  shift 12
	FCOS  shift 13
	FSIN  shift 14
	NOT  shift 15
	LITINT  shift 21
	LITFLOAT  shift 22
	LITSTRING  shift 23
	ID  shift 30
	.  error

	expr  goto 95


state 58
	expr : expr TIMES . expr  (51)
